--- a/prjct4app/prjct4app/prjct4app/prjct4app.csproj
+++ b/prjct4app/prjct4app/prjct4app/prjct4app.csproj
@@ -45,6 +45,9 @@
     <Compile Include="InfoPage.xaml.cs">
       <DependentUpon>InfoPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="InteressePage.xaml.cs">
+      <DependentUpon>InteressePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -82,6 +85,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Datepage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="InteressePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
